# QR_generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose-traefik.yml  docker-compose.yml  ingress.yaml  justfile  pyproject.toml  qrgen-deploy.yaml  qrgen-service.yaml  requirements.txt
.github/workflows/: ci.yml
static/js/: color_contrast_warning.js  form_remove_image.js  input_errors_modal.js
templates/: index.html  result.html
tests/: conftest.py  test_mixins.py  test_result_store.py  test_routes.py
utils/: logger.py  mixins.py  qr_generator.py  result_store.py
