[project]
name = "qr-generator"
version = "0.1.0"
description = "Flask QR code generator with artistic image overlay"
requires-python = ">=3.14"
dependencies = [
    "Flask>=3.1.3",
    "Flask-WTF>=1.2.1",
    "pillow>=11.0",
    "qrcode-artistic>=3.0.2",
    "segno>=1.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.6",
    "ty>=0.0.20",
    "codespell>=2.4.1",
    "bandit[toml]",
    "pytest>=9.0.2",
    "pytest-flask",
    "pytest-cov>=6.1.1",
    "commitizen>=4.13.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 124

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["utils", "app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F841"]
"test_*.py" = ["F401", "F841"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 124

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "--strict-markers"
markers = [
    "unit: fast isolated tests with no IO",
    "integration: tests that touch routes or the store",
    "slow: tests that take more than a few seconds",
]

[tool.ty.environment]
python-version = "3.14"
extra-paths = ["."]

[tool.codespell]
skip = "uv.lock,./static,./.venv"
builtin = "clear"
quiet-level = 3

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B104"]

[tool.coverage.run]
source = ["utils", "app"]

[[tool.ty.overrides]]
include = ["utils/qr_generator.py"]
rules = { call-non-callable = "ignore" }

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
